feat + docs: Authorization with access token

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT=8080
 MONGO_URL=mongodb+srv://doodleragon:HswagOB6vCCg2vHP@cluster0.ucuwo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=265771059314-n7d81eosch0cuh0vhbugl1h07d6l9n27.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=U0plphqEjvwbZdSa3SdsGctE
+ACCESS_TOKEN_SECRET=doodleragon-allowed-access
+REFRESH_TOKEN_SECRET=doodleragon-allowed-refresh
