--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/doodleragon/tdt-forum-reup-#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
