feat: Post CRUD + Skip user auth in dev environment

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=8080
+NODE_ENV=development
 MONGO_URL=mongodb+srv://doodleragon:HswagOB6vCCg2vHP@cluster0.ucuwo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=265771059314-n7d81eosch0cuh0vhbugl1h07d6l9n27.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=U0plphqEjvwbZdSa3SdsGctE
